--- a/src/view/LoginWindow.fxml
+++ b/src/view/LoginWindow.fxml
@@ -55,7 +55,7 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox alignment="CENTER" spacing="30.0" style="-fx-background-color: lightskyblue;" HBox.hgrow="ALWAYS">
+            <VBox alignment="CENTER" spacing="30.0" style="-fx-background-color: lightskyblue;">
                <children>
                   <Label prefHeight="23.0" prefWidth="175.0" style="visibility: false;" text="Welcome Back." textFill="WHITE">
                      <font>
